# mintlify-docs

./: .prettierrc  docs-old.json  docs.base.json  docs.json  index.mdx  kitchen-sink.mdx  navigation.yaml  theme_details.txt
developers/: proof-lifecycle.mdx  quick-start.mdx  what.mdx  why.mdx
developers/kailua/: intro.mdx
developers/smart-contracts/: deployments.mdx  smart-contract-docs.mdx  verifier-contracts.mdx
developers/steel/: commitments.mdx  events.mdx  history.mdx  how-it-works.mdx  quick-start.mdx  what-is-steel.mdx
developers/tooling/: cli.mdx  sdk.mdx
developers/tutorials/: auction.mdx  bonsai.mdx  build.mdx  callbacks.mdx  proof-composition.mdx  proof-types.mdx  request.mdx  sensitive-inputs.mdx  smart-contract-requestor.mdx  tracking.mdx  troubleshooting.mdx  use.mdx
provers/: bento.mdx  broker.mdx  monitoring.mdx  performance-optimization.mdx  proving-stack.mdx  quick-start.mdx
scripts/: parse-navigation-yaml.js
snippets/: home-page.tsx  strip-rust-code-comments-old.jsx  strip-rust-code-comments.jsx  time-calculator.jsx  time-calculator.tsx  youtube-embed.jsx
test-rust-code/: .editorconfig  Cargo.toml  build.rs
test-rust-code/src/: generated_doctests.rs  lib.rs
zkc/: collateral.mdx  quick-start.mdx
zkc/mining/: claiming-rewards.mdx  enable.mdx  overview.mdx  walkthrough.mdx  wallet-setup.mdx
